--- a/CyberpunkVehicles/appsettings.json
+++ b/CyberpunkVehicles/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\Local;Database=CyberpunkVehicles;Trusted_Connection=True;"
+  }
 }
